# irrigation

./: .dockerignore  .gitignore  CONTRIBUTING.md  Cargo.toml  Cross.toml  DEVELOPMENT.md  Dockerfile  LICENSE  Makefile  README.md  WALKTHROUGH.md  config.toml  docker-compose.yml
.cursor/agents/: debugger.md  embedded-software.md  hardware-engineer.md  test-runner.md  verifier.md
.github/workflows/: ci.yml
crates/hub/: Cargo.toml
crates/hub/migrations/: 0001_init.sql
crates/hub/src/: config.rs  db.rs  main.rs  mqtt.rs  scheduler.rs  state.rs  valve.rs  web.rs
crates/hub/src/ui/: index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
crates/hub/src/ui/src/: api.ts  app.tsx  types.ts
crates/hub/src/ui/src/app/dashboard/: page.tsx
crates/hub/src/ui/src/components/: app-sidebar.tsx  chart-area-interactive.tsx  connection-banner.tsx  data-table.tsx  event-log.tsx  section-cards.tsx  site-header.tsx  watering-events-table.tsx  zone-cards.tsx  zone-selector.tsx
crates/hub/src/ui/src/components/ui/: breadcrumb.tsx  button.tsx  chart.tsx  checkbox.tsx  dropdown-menu.tsx  select.tsx  sheet.tsx  sidebar.tsx  sonner.tsx
crates/hub/src/ui/src/hooks/: use-api.ts  use-polling.ts  use-theme.ts  use-toast.ts
crates/node/: Cargo.toml
crates/node/src/: adc.rs  main.rs  sim.rs
deploy/: README.md  irrigation-hub.service  irrigation-node.service  mosquitto-production.conf
docker/: mosquitto.conf
