[package]
name = "irrigation-hub"
version = "0.1.0"
edition = "2021"

[features]
default = []
gpio = ["rppal"]

[dependencies]
rumqttc = "0.24"
tokio = { version = "1.36", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rppal = { version = "0.17", optional = true }
anyhow = "1.0"
axum = "0.8"
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"