[package]
name = "irrigation-hub"
version = "0.1.0"
edition = "2021"

[features]
default = []
gpio = ["rppal"]
tls = ["dep:axum-server"]

[dependencies]
rumqttc = "0.24"
tokio = { version = "1.36", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rppal = { version = "0.17", optional = true }
anyhow = "1.0"
axum = "0.8"
axum-server = { version = "0.8", features = ["tls-rustls"], optional = true }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
sqlx = { version = "0.7", features = ["runtime-tokio", "sqlite", "macros", "migrate"] }
time = { version = "0.3", features = ["macros", "serde", "serde-well-known"] }
toml = "0.8"
sysinfo = "0.31"

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"