[package]
name = "irrigation-node"
version = "0.1.0"
edition = "2021"

[features]
default = ["sim"]
sim = ["fastrand"]
adc = ["rppal"]  # real ADS1115 reads via I2C on Raspberry Pi

[dependencies]
rumqttc = "0.24"
tokio = { version = "1.36", features = ["rt", "macros", "time"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
time = { version = "0.3", features = ["serde"] }
fastrand = { version = "2", optional = true }
rppal = { version = "0.17", optional = true }
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }